Fix svg zoom glitch on Safari

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -162,3 +162,7 @@
   padding: 0 1rem;
   text-align: left;
 }
+
+foreignObject {
+  zoom: -internal-reset-effective !important;
+}
